Update todo items
Origin Branch: master

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
 2019-07-09 Warn if subject > 50 and fail if > 70
+2019-07-10 Ignore comments in the commit-msg
+2019-07-10 Change branch orgin metadata name
