--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 x 2019-07-22 2019-07-09 Warn if subject > 50 and fail if > 70
-2019-07-10 Ignore comments in the commit-msg
-2019-07-10 Change branch orgin metadata name
+x 2019-07-22 2019-07-10 Ignore comments in the commit-msg
+x 2019-07-22 2019-07-10 Change branch orgin metadata name
+2019-07-22 Change branch metadata to only add if it doesn't exist
 2019-07-09 Add contributing file https://github.com/spring-projects/spring-framework/blob/30bce7/CONTRIBUTING.md
 2019-07-15 Add max file length to 2000 lines
