--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -4,3 +4,5 @@ x 2019-07-22 2019-07-10 Change branch orgin metadata name
 2019-07-22 Change branch metadata to only add if it doesn't exist
 2019-07-09 Add contributing file https://github.com/spring-projects/spring-framework/blob/30bce7/CONTRIBUTING.md
 2019-07-15 Add max file length to 2000 lines
+2019-07-24 Refactor +formatting to detail each rule
+2019-07-24 Add +profiling to each script executed
