--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -7,3 +7,4 @@ x 2019-07-22 2019-07-10 Change branch orgin metadata name
 2019-07-24 Refactor +formatting to detail each rule
 2019-07-24 Add +profiling to each script executed
 2019-07-24 Add +configuration for ERROR vs WARN for scripts
+2019-08-13 Add ignore for +merge title length
