--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -6,7 +6,7 @@ x 2019-07-22 2019-07-10 Change branch orgin metadata name
 2019-07-15 Add max file length to 2000 lines
 2019-07-24 Refactor +formatting to detail each rule
 2019-07-24 Add +profiling to each script executed
-2019-07-24 Add +configuration for ERROR vs WARN for scripts
+x 2019-08-27 2019-07-24 Add +configuration for ERROR vs WARN for scripts start:2019-08-27
 2019-08-13 Add ignore for +merge title length
-2019-08-19 Enhance +master check to look for override file
+x 2019-08-27 2019-08-19 Enhance +master check to look for override file start:2019-08-27
 2019-08-19 Enhance +commit-size to ignore merge commits
