--- a/.todo/todo.txt
+++ b/.todo/todo.txt
@@ -10,3 +10,5 @@ x 2019-08-27 2019-07-24 Add +configuration for ERROR vs WARN for scripts start:2
 2019-08-13 Add ignore for +merge title length
 x 2019-08-27 2019-08-19 Enhance +master check to look for override file start:2019-08-27
 2019-08-19 Enhance +commit-size to ignore merge commits
+2019-08-28 Refactor configuration to use properties with overrides start:2019-08-28
+2019-08-28 Document .gitalias in README.md
